--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <meta name="description" content="Hi I'm Mary, a UI & UX designer based in Dublin. Mobile and Responsive Web Design, eCommerce Websites, Branding and Logo Design.">
 </head>
 <body>
-<h1>Hi, I'm Giuli Alves, welcome to my website</h1>
+    <header>
+        <h1>Hi, I'm Giuli Alves, welcome to my website</h1>
+        <h2>Web / UI Designer</h2>
+    </header>
 
-<h2>Web / UI Designer</h2>
-
-<h2>Small Heading</h2>
-<p>I created a website to showcase some of my recent web design work</p>
-
-<p><a href="excercises/page-1.html">A tale of Two Cities</a></p>
+    <main>
+        <section>
+            <h2>Small Heading</h2>
+            
+            <p>I created a website to showcase some of my recent web design work</p>
+            
+            <p><a href="excercises/page-1.html">A tale of Two Cities</a></p>
+            <p><a href="excercises/Page-2.html">Purple Rain</a></p>    
+            <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
+        </section>
+    </main>
 
 
 </body>
