--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@
     <title>Giuli Alves | Creative Digital Designer</title>
     <meta name="description" content="Hi I'm Mary, a UI & UX designer based in Dublin. Mobile and Responsive Web Design, eCommerce Websites, Branding and Logo Design.">
     
-<link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="assets/img/favicons/site.webmanifest">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HSCWGM3DHH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HSCWGM3DHH');
+</script>
 </head>
 <body>
     <header>
         <h1>Hi, I'm Giuli Alves</h1>
         <h2>Web / UI Designer</h2>
+        <img src="assets/img/developer.jpeg" alt="Giuli Alves: Web Designer">
     </header>
 
     <main>
@@ -23,6 +39,9 @@
             <p><a href="exercises/page-1.html">A tale of Two Cities</a></p>
             <p><a href="exercises/Page-2.html">Purple Rain</a></p>    
             <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
+            <p><a href="exercises/page-4.html">Vincent van Gogh</a></p> 
+            <p><a href="exercises/page-5.html">Irish Tourism</a></p>
+            <p><a href="exercises/hero-image.html">Hero block with background image</a></p> 
         </section>
     </main>
 
