--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -22,7 +22,7 @@
 
     <!-- Main content of web page in sections -->
     <main>
-        <section>
+        <section class="section-1">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in quisquam?</p>
 
@@ -30,7 +30,7 @@
 
         </section>
 
-        <section>
+        <section class="section-2">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in quisquam?</p>
 
@@ -38,7 +38,7 @@
 
         </section>
 
-        <section>
+        <section class="section-3">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in quisquam?</p>
 
